--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Project Refinery, Inc., Nashville, TN</b></h5>
           <h6 class="w3-text-green"><i class="fa fa-calendar fa-fw w3-margin-right"></i>VP & Consultant, 2001 - 2011</h6>
-          <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+          <p>Executive and Consultant for technical services business offering clients systems architecture, application development, network engineering, and database administration.</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Advanced Solutions, Inc., Dickson, TN</b></h5>
           <h6 class="w3-text-green"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Principal, 1997 - 2001</h6>
-          <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+          <p>Started technical services business providing systems architecture, application development, network engineering, and relational database administration.</p>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>RAD Solutions, Inc., Nashville, TN</b></h5>
