--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Computer Task Group (CTG), Brentwood, TN</b></h5>
           <h6 class="w3-text-green"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Developer, 1987 - 1989</h6>
-          <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+          <p>Contract programmer providing COBOL/CICS services.</p>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Third National Bank, Nashville, TN</b></h5>
           <h6 class="w3-text-green"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Developer, 1985 - 1987</h6>
-          <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+          <p>Financial systems COBOL/CICS programmer.</p>
         </div>
       </div>
 
