--- a/index.html
+++ b/index.html
@@ -28,36 +28,36 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-green"></i>Software Engineer</p>
-          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-green"></i>Franklin, TN (USA)</p>
-          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-green"></i>jeff.black@outlook.com</p>
-          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-green"></i>6156680493</p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-indigo"></i>Software Engineer</p>
+          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-indigo"></i>Franklin, TN (USA)</p>
+          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-indigo"></i>jeff.black@outlook.com</p>
+          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-indigo"></i>6156680493</p>
           <hr>
 
-          <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Skills</b></p>
+          <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-indigo"></i>Skills</b></p>
           <p>Java EE, C/C++, Spring, JSF, Hibernate, Struts/2</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-green" style="width:100%">100%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:100%">100%</div>
           </div>
           <p>Perl, PHP, Python</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-green" style="width:100%">100%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:100%">100%</div>
           </div>
           <p>SQL Server, Oracle, MySQL, Sybase</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-green" style="width:100%">100%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:100%">100%</div>
           </div>
           <p>JavaScript, ECMAScript, jQuery, CSS3</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-green" style="width:100%">100%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:100%">100%</div>
           </div>
           <p>Angular, Knockout, React</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-green" style="width:80%">80%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:80%">80%</div>
           </div>
           <p>Azure, AWS, Google, OpenShift</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-green" style="width:70%">70%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:70%">70%</div>
           </div>
           <br>
         </div>
@@ -70,56 +70,56 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="w3-twothird">
     
       <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-green"></i>Professional Experience</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Professional Experience</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Aetna, Inc., Franklin, TN</b></h5>
-          <h6 class="w3-text-green"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Full Stack Java Developer, Mar 2011 - <span class="w3-tag w3-green w3-round">Current</span></h6>
+          <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Full Stack Java Developer, Mar 2011 - <span class="w3-tag w3-indigo w3-round">Current</span></h6>
           <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Project Refinery, Inc., Nashville, TN</b></h5>
-          <h6 class="w3-text-green"><i class="fa fa-calendar fa-fw w3-margin-right"></i>VP & Consultant, 2001 - 2011</h6>
+          <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>VP & Consultant, 2001 - 2011</h6>
           <p>Executive and Consultant for technical services business offering clients systems architecture, application development, network engineering, and database administration.</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Advanced Solutions, Inc., Dickson, TN</b></h5>
-          <h6 class="w3-text-green"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Principal, 1997 - 2001</h6>
+          <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Principal, 1997 - 2001</h6>
           <p>Started technical services business providing systems architecture, application development, network engineering, and relational database administration.</p>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>RAD Solutions, Inc., Nashville, TN</b></h5>
-          <h6 class="w3-text-green"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Software Engineer, 1994 - 1997</h6>
+          <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Software Engineer, 1994 - 1997</h6>
           <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>First American Bank, Nashville, TN</b></h5>
-          <h6 class="w3-text-green"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Developer, 1993 - 1994</h6>
+          <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Developer, 1993 - 1994</h6>
           <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>NationsBank, Nashville, TN</b></h5>
-          <h6 class="w3-text-green"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Developer, 1989 - 1993</h6>
+          <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Developer, 1989 - 1993</h6>
           <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Computer Task Group (CTG), Brentwood, TN</b></h5>
-          <h6 class="w3-text-green"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Developer, 1987 - 1989</h6>
-          <p>Contract programmer providing COBOL/CICS services.</p>
+          <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Developer, 1987 - 1989</h6>
+          <p>Contract COBOL/CICS programmer.</p>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Third National Bank, Nashville, TN</b></h5>
-          <h6 class="w3-text-green"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Developer, 1985 - 1987</h6>
+          <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Developer, 1985 - 1987</h6>
           <p>Financial systems COBOL/CICS programmer.</p>
         </div>
       </div>
 
       <div class="w3-container w3-card-2 w3-white">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-green"></i>Education</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Education</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Middle Tennessee State University</b></h5>
-          <h6 class="w3-text-green"><i class="fa fa-calendar fa-fw w3-margin-right"></i>BA in Liberal Studies - Senior</h6>
+          <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>BA in Liberal Studies - Senior</h6>
         </div>
       </div>
 
@@ -132,7 +132,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <!-- End Page Container -->
 </div>
 
-<footer class="w3-container w3-green w3-center w3-margin-top">
+<footer class="w3-container w3-indigo w3-center w3-margin-top">
   <p>Find me on social media.</p>
   <i class="fa fa-twitter w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
