--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-green"></i>Software Engineer</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-green"></i>Franklin, TN (USA)</p>
-          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-green"></i>jeff.black@outlook.com</p>
+          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-green"></i>
+          <a href="mailto:jeff.black@outlook.com?Subject=Contacting you about your resume" target="_blank">jeff.black@outlook.com</a>
+          </p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-green"></i>6156680493</p>
           <hr>
 
