--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
         <div class="w3-container">
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Software Engineer</p>
-          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Franklin, TN (USA)</p>
+          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>
+              <a href="#myLocation">Franklin, TN (USA)</a>
+          </p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>
           <a href="mailto:jeff.black@outlook.com?Subject=Contacting you about your resume" target="_blank">jeff.black@outlook.com</a>
           </p>
@@ -129,7 +131,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
       </div>
 
-      <div class="w3-container w3-card-2 w3-white">
+      <div class="w3-container w3-card-2 w3-white" id="myLocation">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>My Location</h2>
         <div id="googleMap" class="w3-grayscale" style="width:100%;height:400px;"></div>
       </div>
