--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
       <div class="w3-container w3-card-2 w3-white" id="myLocation">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>My Location</h2>
-        <div id="googleMap" class="w3-grayscale" style="width:100%;height:400px;"></div>
+        <div id="googleMap" class="w3-container w3-margin-bottom w3-grayscale" style="width:100%;height:400px;"></div>
       </div>
 
     <!-- End Right Column -->
