--- a/index.html
+++ b/index.html
@@ -67,7 +67,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
           </div>
-          <br>
+
+          <p>
+          <button class="w3-button w3-teal w3-padding-large w3-section" type="submit" onclick="window.open('static/jeff_black_resume.pdf')">
+              <i class="fa fa-download"></i> Download Resume
+          </button>
+          </p>
+
         </div>
       </div><br>
 
