--- a/index.html
+++ b/index.html
@@ -153,12 +153,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
-  <a href="https://twitter.com/jeffblack360">
-      <i class="fa fa-twitter w3-hover-opacity"></i>
-  </a>
-  <a href="https://www.linkedin.com/in/jeffreyblack/">
-      <i class="fa fa-linkedin w3-hover-opacity"></i>
-  </a>
+  <a href="https://twitter.com/jeffblack360"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+  <a href="https://www.linkedin.com/in/jeffreyblack/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
