--- a/index.html
+++ b/index.html
@@ -101,35 +101,41 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>Advanced Solutions, Inc., Dickson, TN</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Principal, 1997 - 2001</h6>
           <p>Started technical services business providing clients systems architecture, application development, network engineering, and relational database administration.</p>
+          <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>RAD Solutions, Inc., Nashville, TN</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Software Engineer, 1994 - 1997</h6>
           <p>Consultant providing Client/Server engineering services to clients.</p>
+          <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>First American Bank, Nashville, TN</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Developer, 1993 - 1994</h6>
           <p>Financial systems Client/Server developer.</p>
+          <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>NationsBank, Nashville, TN</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Developer, 1989 - 1993</h6>
           <p>Financial systems engineer supporting Branch Automation PC Systems.</p>
+          <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Computer Task Group (CTG), Brentwood, TN</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Developer, 1987 - 1989</h6>
           <p>COBOL/CICS programming services for clients.</p>
+          <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Third National Bank, Nashville, TN</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Developer, 1985 - 1987</h6>
           <p>Financial systems COBOL/CICS programmer.</p>
+          <hr>
         </div>
       </div>
 
-      <div class="w3-container w3-card-2 w3-white">
+      <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Middle Tennessee State University</b></h5>
